--- a/finimalism6-0.css
+++ b/finimalism6-0.css
@@ -44,6 +44,12 @@ body {
   }
 }
 
+.playedIndicator, .innerCardFooter {
+  background: rgba(0,0,0,0.4);
+  box-shadow: none;
+  display: none;
+}
+
 .parentName {
   display: none;
   margin: 0 0 0;
@@ -1611,11 +1617,12 @@ progress::-webkit-progress-value {
 }
 
 .cardOverlayButtonIcon {
-  font-size: 1.2em !important;
+  font-size: 1.3em !important;
   height: 1.5em !important;
   -webkit-justify-content: center;
   justify-content: center;
   width: 1em !important;
+  height: 5em !important;
 }
 
 
