--- a/finimalism6-0.css
+++ b/finimalism6-0.css
@@ -2150,6 +2150,13 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
   margin-top: 0em;
 }
 
+.dialog-fixedSize {
+  border-radius: 0;
+  contain: layout style paint;
+  max-height: 80vh;
+  max-width: 80vw;
+}
+
 /* Remove empty space at bottom of page */
 .content-primary, .padded-bottom-page, .page, .pageWithAbsoluteTabs .pageTabContent {
   padding-bottom: 0 !important;
