--- a/theme.css
+++ b/theme.css
@@ -55,6 +55,7 @@ html {
 	opacity: 0.2;
 }
 
+
 .itemsContainer.padded-left {
     position: top;
     z-index: 1;
@@ -74,12 +75,8 @@ html {
     background-attachment: fixed;
 }
 
-.sectionTitle.sectionTitle-cards.padded-left {
-    position: top;
-    z-index: -1;
-}
 
-.sectionTitle.sectionTitle-cards.padded-left::before {
+.sectionTitleContainer.sectionTitleContainer-cards.padded-left::before {
     content: '';
     position: fixed;
     top: 0;
@@ -88,8 +85,8 @@ html {
     height: 100vh;
     background: url(bg.jpg) center top no-repeat #030322;
     background-size: cover;
-    opacity: 0.7;
-    z-index: -2;
+    opacity: 0.2;
+    z-index: -1;
     background-attachment: fixed;
 }
 
