--- a/finimalism7.css
+++ b/finimalism7.css
@@ -20,6 +20,7 @@
 	opacity: 0.2;
 }
 
+
 .itemsContainer.padded-left {
     position: top;
     z-index: 1;
@@ -38,6 +39,7 @@
     z-index: -1;
     background-attachment: fixed;
 }
+
 
 .sectionTitleContainer.sectionTitleContainer-cards.padded-left::before {
     content: '';
@@ -179,6 +181,7 @@ span.homeLibraryText {
 .itemProgressBarForeground {
     background: linear-gradient(to right, rgba(163, 95, 198, 1) 0%, rgba(6, 161, 217, 1) 100%);
 }
+
 
 /*Raise detailPage detailRibbon */
 
@@ -1986,7 +1989,9 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
   margin-bottom: 0em;
 }
 
-
+.layout-mobile #indexPage .overflowBackdropCard, .overflowSmallBackdropCard {
+  width: 11.5em;
+}
 
 /* Push scroll buttons to the right */
 .homePage .section1.verticalSection .sectionTitle-cards + .emby-scrollbuttons {
@@ -2093,7 +2098,7 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 }
 
 .layout-mobile .homePage .section1.verticalSection .sectionTitle-cards {
-  margin-top: 1em !important;
+  margin-top: 0.5em !important;
   margin-left: 10px;
 }
 
